--- a/index.html
+++ b/index.html
@@ -224,13 +224,8 @@
   <h2>The Course</h2>
 
   <p>
-    The course winds through the varied trails of <strong>Blaise Castle Estate</strong>,
+    The course is 4.167-mile (6.7 km) long, and winds through the varied trails of <strong>Blaise Castle Estate</strong>,
     combining woodland paths, open parkland, and gently rolling terrain.
-  </p>
-
-  <p>
-    <strong>Conditions will evolve as the hours pass</strong>, with sections that feel
-    forgiving early on and more demanding later.
   </p>
 
   <p>
@@ -249,15 +244,24 @@
   </div>
 </section>
 
+  <blockquote class="instagram-media"
+  data-instgrm-permalink="https://www.instagram.com/gravelandgritevents/"
+  data-instgrm-version="14"
+  style="background:#FFF; border:0; margin: 1.5rem auto; max-width:540px;">
+</blockquote>
+
+<script async src="//www.instagram.com/embed.js"></script>
+
 <section id="community">
   <h2>What You’ll Get</h2>
   <ul>
-    <li><strong>A true Backyard Ultra experience</strong> — run to classic Last One Standing rules.</li>
-    <li><strong>Fully supported race basecamp</strong> — space for crew, chairs, and personal setups.</li>
-    <li><strong>Medical cover and volunteers</strong> — support throughout day and night.</li>
-    <li><strong>Clear, well-marked course</strong> — no navigation, no distractions.</li>
-    <li><strong>An inclusive, runner-first atmosphere</strong> — all goals respected.</li>
-    <li><strong>A test of strategy, not speed</strong> — patience, pacing, and decision-making.</li>
+    <li><strong>A true Backyard Ultra experience, run to the classic Last Man Standing rules.
+    <li><strong>Fully stocked basecamp inlucding toilets, food, and hot and cold water. 
+    <li><strong>Medical cover and volunteers to support you through day and night.
+    <li><strong>Clear, well-marked course. No navigation, no distractions.
+    <li><strong>On site cafe, parking, toilets and playpark for family and friends.
+    <li><strong>An inclusive, runner-first atmosphere - everyone's goals are respected here. 
+    <li><strong>A unique, memorable DNF token - or will you be the last one standing and claim the prize?
   </ul>
 </section>
 
