--- a/index.html
+++ b/index.html
@@ -95,24 +95,17 @@
       margin-bottom: 1rem;
     }
 
-    .image-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .image-gallery img {
-      width: 100%;
-      border-radius: 8px;
-      object-fit: cover;
-    }
-
     footer {
       text-align: center;
       font-size: 0.85rem;
       margin-top: 3rem;
       padding-bottom: 2rem;
+    }
+
+    /* Instagram centering */
+    .instagram-wrapper {
+      display: flex;
+      justify-content: center;
     }
 
     /* Sticky ticket button */
@@ -179,7 +172,6 @@
 <nav>
   <a href="#about">About</a>
   <a href="#course">Course</a>
-  <a href="#gallery">Photos</a>
   <a href="#community">What You Get</a>
   <a href="#contact">Contact</a>
 </nav>
@@ -235,20 +227,16 @@
   </p>
 </section>
 
-<section id="gallery">
-  <h2>Photos from the team's recent Backyard Ultras</h2>
-  <div class="image-gallery">
-    <img src="night-running.JPEG">
-    <img src="running-open-field.JPEG">
-    <img src="walking-finish.JPEG">
+<section>
+  <div class="instagram-wrapper">
+    <blockquote
+      class="instagram-media"
+      data-instgrm-permalink="https://www.instagram.com/gravelandgritevents/"
+      data-instgrm-version="14"
+      style="background:#FFF; border:0; max-width:540px;">
+    </blockquote>
   </div>
 </section>
-
-  <blockquote class="instagram-media"
-  data-instgrm-permalink="https://www.instagram.com/gravelandgritevents/"
-  data-instgrm-version="14"
-  style="background:#FFF; border:0; margin: 1.5rem auto; max-width:540px;">
-</blockquote>
 
 <script async src="//www.instagram.com/embed.js"></script>
 
@@ -256,11 +244,11 @@
   <h2>What You’ll Get</h2>
   <ul>
     <li><strong>A true Backyard Ultra experience, run to the classic Last Man Standing rules.
-    <li><strong>Fully stocked basecamp inlucding toilets, food, and hot and cold water. 
+    <li><strong>Fully stocked basecamp inlucding toilets, food, and hot and cold water.
     <li><strong>Medical cover and volunteers to support you through day and night.
     <li><strong>Clear, well-marked course. No navigation, no distractions.
     <li><strong>On site cafe, parking, toilets and playpark for family and friends.
-    <li><strong>An inclusive, runner-first atmosphere - everyone's goals are respected here. 
+    <li><strong>An inclusive, runner-first atmosphere - everyone's goals are respected here.
     <li><strong>A unique, memorable DNF token - or will you be the last one standing and claim the prize?
   </ul>
 </section>
@@ -282,12 +270,6 @@
   rel="noopener noreferrer"
   class="sticky-ticket"
 >
-  Get Tickets
-</a>
-
-</body>
-</html>
-
   Get Tickets
 </a>
 
