--- a/index.html
+++ b/index.html
@@ -241,10 +241,11 @@
 <section id="community">
   <h2>What You’ll Get</h2>
   <ul>
-    <li><strong>An official UK Backyard Ultra experience</strong></li>
-    <li><strong>Fully stocked basecamp and facilities</strong></li>
-    <li><strong>Medical cover and volunteer support</strong></li>
-    <li><strong>Inclusive, runner-first atmosphere</strong></li>
+    <li><strong>An true UK Backyard Ultra experience, run to the classic Last One Standing Rules.</strong></li>
+    <li><strong>Fully stocked basecamp including toilets and food, as well as hot and cold water.</strong></li>
+    <li><strong>Medical cover and volunteers to support you though the day (and night)!</strong></li>
+    <li><strong>Clear, well-marked course. No navigation issues. No distractions.</strong></li>
+    <li><strong>On site cafe, parking, toilets and playpark for family and friends.</strong></li>
     <li><strong>A unique DNF token — or the Last One Standing prize</strong></li>
   </ul>
 </section>
