--- a/index.html
+++ b/index.html
@@ -193,19 +193,11 @@
   This is not a race about speed. It is about pacing, recovery, decision-making, and managing the mental challenge of repetition. </p>
 </section>
 
-<section id="course">
-  <h2>The Course</h2>
-
-  <p>
-    The 4.167-mile loop winds through the varied trails of
-    <strong>Blaise Castle Estate, Bristol</strong>, combining woodland paths,
-    open fields, and gently rolling terrain.
-  </p>
-
-  <p>
-    The course is fully marked, easy to follow, and requires no navigation,
-    allowing runners to focus entirely on each hourly effort.
-  </p>
+<section id="course"> <h2>The Course</h2>
+  
+<p> The course is 4.167-mile (6.7 km) long, and winds through the varied trails of <strong>Blaise Castle Estate</strong>, 
+combining woodland paths, open parkland, and gently rolling terrain. </p> <p> The loop is fully marked and easy to follow,
+with no navigation required, allowing runners to focus solely on completing each lap and returning to the start before the next bell. </p>
 </section>
 
 <section id="faq">
