--- a/index.html
+++ b/index.html
@@ -243,16 +243,42 @@ with no navigation required, allowing runners to focus solely on completing each
 </section>
 
 <section id="faq">
-  <h2>Backyard Ultra UK – FAQs</h2>
+  <h2>Backyard Ultra UK – Frequently Asked Questions</h2>
 
-  <p><strong>Is this suitable for beginners?</strong><br>
-  Yes. Many runners aim for just a few loops. You decide when to stop.</p>
+  <p><strong>What is a Backyard Ultra?</strong><br>
+  A Backyard Ultra (also known as “Last One Standing”) is a unique endurance running format. Runners complete a 6.7km (4.167 mile) loop every hour, on the hour. You must finish each loop within the hour to be allowed to continue to the next one. The event continues until only one runner remains who completes a loop on their own.</p>
 
-  <p><strong>Is this an official Backyard Ultra?</strong><br>
-  Yes — the event follows the official Backyard Ultra (Last One Standing) format.</p>
+  <p><strong>Is this Backyard Ultra suitable for beginners?</strong><br>
+  Yes — absolutely. While some runners will aim to go deep into the event, many participants come with the goal of completing just a few loops. The Backyard Ultra format is uniquely beginner-friendly because you choose when to stop. There is no minimum distance requirement beyond completing a single loop, and no pressure to continue beyond what feels right for you.</p>
 
-  <p><strong>Where is the race held?</strong><br>
-  Blaise Castle Estate, Bristol, South West England.</p>
+  <p>This event is designed to be inclusive and welcoming. Whether your goal is one loop, five loops, or an all-day challenge, you’ll be supported and celebrated for taking part.</p>
+
+  <p><strong>Is this an official Backyard Ultra event?</strong><br>
+  Yes. This event follows the official Backyard Ultra (Last One Standing) format: a 6.7km loop, run every hour on the hour, until one runner remains. Timing, distances, and rules align with the internationally recognised Backyard Ultra standard.</p>
+
+  <p><strong>Where is the Backyard Ultra held?</strong><br>
+  The event takes place at Blaise Castle Estate in Bristol, South West England. The estate offers a varied and scenic setting, combining woodland trails, open fields, gentle climbs, and flatter runnable sections.</p>
+
+  <p><strong>What is the course like?</strong><br>
+  The looped course includes a mix of terrain: short hills, long flatter sections, woodland trails, and open fields. Runners can expect both single-track paths and wider, more open trail sections. The variety keeps the course interesting while remaining runnable and manageable across multiple loops.</p>
+
+  <p><strong>Do I have to keep running until there is one person left?</strong><br>
+  No. You are free to stop after any completed loop. Many runners treat a Backyard Ultra as a personal challenge rather than a competition. Once you decide to stop, your result is recorded as the number of full loops completed.</p>
+
+  <p><strong>Is this a competitive race?</strong><br>
+  While there is technically one winner, the event is community-focused and runner-led. The atmosphere is supportive rather than aggressive, with runners encouraging each other as the hours pass. Many participants value the shared experience as much as the physical challenge.</p>
+
+  <p><strong>What kind of runners take part?</strong><br>
+  Backyard Ultras attract a wide range of runners — from those new to ultra-distance running, to experienced endurance athletes aiming for long distances. You do not need to be an elite runner to take part; pacing, patience, and consistency matter far more than speed.</p>
+
+  <p><strong>Is there a time limit?</strong><br>
+  There is no fixed time limit. The event continues until only one runner completes a solo loop. Some runners may finish within a few hours, while others may continue overnight and beyond.</p>
+
+  <p><strong>Is this a UK-based Backyard Ultra?</strong><br>
+  Yes. This is a UK Backyard Ultra held in Bristol, making it easily accessible for runners across the South West and beyond.</p>
+
+  <p><strong>How do I enter?</strong><br>
+  Entry is via our official ticketing partner. Please visit the ticket link on this website for current availability and pricing.</p>
 </section>
 
 <section>
