--- a/index.html
+++ b/index.html
@@ -323,5 +323,8 @@ with no navigation required, allowing runners to focus solely on completing each
   Get Tickets
 </a>
 
+<!-- Mailchimp script -->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");</script>
+
 </body>
 </html>
