--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 }
 </script>
 
+<!-- Mailchimp script (moved to head for detection) -->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");</script>
+
 </head>
 
 <body>
@@ -322,9 +325,6 @@ with no navigation required, allowing runners to focus solely on completing each
    class="sticky-ticket">
   Get Tickets
 </a>
-
-<!-- Mailchimp script -->
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");</script>
 
 </body>
 </html>
