--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@ with no navigation required, allowing runners to focus solely on completing each
   <p><strong>Is this a UK-based Backyard Ultra?</strong><br>
   Yes. This is a South West UK Backyard Ultra held in Bristol, making it easily accessible for runners across the region and beyond.</p>
 
+  <p><strong>Is this event compliant with UK Athletics rules?</strong><br>
+  Yes. This event is licenced by the TRA and will adhere to UK Athletics rules for trail running.</p>
+
   <p><strong>How do I enter?</strong><br>
   Entry is via our official ticketing partner. Please visit the ticket link on this website for current availability and pricing.</p>
 </section>
