--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@ with no navigation required, allowing runners to focus solely on completing each
   <p><strong>Is this event compliant with UK Athletics rules?</strong><br>
   Yes. This event is licenced by the TRA and will adhere to UK Athletics rules for trail running.</p>
 
+  <p><strong>What is the minimum age for entering this event?</strong><br>
+  As the event complies with UK Athletics rules for trail running, participants must be 20 or older on the day of the event.</p>
+
   <p><strong>How do I enter?</strong><br>
   Entry is via our official ticketing partner. Please visit the ticket link on this website for current availability and pricing.</p>
 </section>
